<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >


    <!-- Imagen de fondo más visible -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/book_background"
        android:alpha="0.7" />
    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="48dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/splash_image"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_mask"
        android:clipToOutline="true" />


    <!-- Contenido encima del fondo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="240dp">

        <!-- Campo Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email_hint"
            app:hintTextColor="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:backgroundTint="#555555"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:hint="@string/password_hint"
            app:hintTextColor="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="#AAAAAA"
                android:backgroundTint="#555555"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón Iniciar Sesión -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textColor="#000000"
            android:layout_marginTop="29dp" />

        <!-- Botón Registrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/register_button"
            android:textColor="#FFA500" />
    </LinearLayout>
</FrameLayout>
